Bug 440957 - Password dots are the wrong color on the login screen due to cached stuff not being invalidated/cleared
Summary: Password dots are the wrong color on the login screen due to cached stuff not...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 5.23.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
: 417057 449117 450521 450783 454564 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-14 09:58 UTC by kim+kdebug
Modified: 2022-06-01 22:34 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.6
Sentry Crash Report:


Attachments
password dot are white which is invisible if not selected (362.44 KB, image/png)
2021-08-14 09:58 UTC, kim+kdebug
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kim+kdebug 2021-08-14 09:58:47 UTC
Created attachment 140710 [details]
password dot are white which is invisible if not selected

SUMMARY
Passwords are invisible in sddm. 

STEPS TO REPRODUCE
1. Apply breeze dark and synchronize settings with sddm
2. Input password

OBSERVED RESULT
Show white dots in white background

EXPECTED RESULT
Show black dots in white background

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: EndeavourOS
(available in About System)
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-08-16 15:57:41 UTC
Can you please paste the contents of /etc/sddm.conf.d/kde_settings.conf?
Comment 2 kim+kdebug 2021-08-16 20:36:40 UTC
(In reply to Nate Graham from comment #1)
> Can you please paste the contents of /etc/sddm.conf.d/kde_settings.conf?

[Autologin]
Relogin=false
Session=
User=

[General]
HaltCommand=/usr/bin/systemctl poweroff
RebootCommand=/usr/bin/systemctl reboot

[Theme]
Current=breeze
CursorTheme=breeze_cursors
Font=Pretendard,10,-1,5,50,0,0,0,0,0

[Users]
MaximumUid=60000
MinimumUid=1000
Comment 3 Nate Graham 2021-08-16 20:57:17 UTC
Thanks. And is there anything else inside the folder /etc/sddm.conf.d/ ?
Comment 4 kim+kdebug 2021-08-16 20:58:30 UTC
(In reply to Nate Graham from comment #3)
> Thanks. And is there anything else inside the folder /etc/sddm.conf.d/ ?

Thanks for looking into my issue :)

There isn't anything else than kde_settings.conf
Comment 5 Nate Graham 2021-08-17 15:36:25 UTC
Thanks. So the config file says you're using the Breeze theme with the default color scheme--not a dark color scheme. And your screenshot actually shows that.

The fact that the dots in your screenshot are white when un-selected instead of dark is very strange. As far as SDDM is concerned, it's doing everything right. I suspect a cache bug. If you delete ~/.cache/plasma* and restart, does the issue go away?
Comment 6 kim+kdebug 2021-08-17 15:44:27 UTC
(In reply to Nate Graham from comment #5)
> Thanks. So the config file says you're using the Breeze theme with the
> default color scheme--not a dark color scheme. And your screenshot actually
> shows that.
> 
> The fact that the dots in your screenshot are white when un-selected instead
> of dark is very strange. As far as SDDM is concerned, it's doing everything
> right. I suspect a cache bug. If you delete ~/.cache/plasma* and restart,
> does the issue go away?

Hi, deleted ~/.cache/plasma* and rebooted. But the issue persists.
Comment 7 Nate Graham 2021-08-18 15:10:29 UTC
OK, thanks. Do you see this issue in any other text fields in Plasma, such as the one in Kickoff or KRunner or the Clipboard or Networks System Tray applets?
Comment 8 kim+kdebug 2021-08-18 15:31:12 UTC
(In reply to Nate Graham from comment #7)
> OK, thanks. Do you see this issue in any other text fields in Plasma, such
> as the one in Kickoff or KRunner or the Clipboard or Networks System Tray
> applets?

Hi, there is no issue with another applets
Comment 9 Nate Graham 2021-08-18 15:32:13 UTC
That's quite strange. I'm at a loss.
Comment 10 steptracer 2022-01-24 21:09:46 UTC
I am having this exact same problem on Kubuntu 21.10 (KDE Plasma 5.22.5, KDE Frameworks 5.86.0, Qt 5.15.2). It started after I synchronized my Breeze Dark theme to SDDM. Changing SDDM themes did not solve it. Changing the global theme back do Breeze light and syncing again to SDDM did. I looks like SDDM is using the font color from the synchronized theme, but it is not changing the password field background.
Comment 11 Nate Graham 2022-01-25 21:23:24 UTC
*** Bug 449117 has been marked as a duplicate of this bug. ***
Comment 12 kim+kdebug 2022-02-09 02:51:53 UTC
Removing /var/lib/sddm/.cache fixed the issue for me. Maybe we should run this after changing theme in kcm_sddm?
Comment 13 Nate Graham 2022-02-10 18:00:54 UTC
Yeah, maybe we should.
Comment 14 Nate Graham 2022-02-18 17:22:13 UTC
*** Bug 450521 has been marked as a duplicate of this bug. ***
Comment 15 postix 2022-02-18 18:42:39 UTC
(In reply to kim+kdebug from comment #12)
> Removing /var/lib/sddm/.cache fixed the issue for me. 

Can confirm that!
Comment 16 Patrick Silva 2022-02-24 15:47:41 UTC
*** Bug 450783 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2022-05-17 13:46:52 UTC
*** Bug 417057 has been marked as a duplicate of this bug. ***
Comment 18 Bug Janitor Service 2022-05-17 21:20:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/sddm-kcm/-/merge_requests/24
Comment 19 saxn 2022-05-20 10:26:18 UTC
(In reply to Bug Janitor Service from comment #18)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/sddm-kcm/-/merge_requests/24

same issue in plasma 5.24.90 neon unstable branch.
Comment 20 Nate Graham 2022-06-01 17:52:12 UTC
*** Bug 454564 has been marked as a duplicate of this bug. ***
Comment 21 Nate Graham 2022-06-01 22:32:06 UTC
Git commit 77052b081b709e3d7dd76f4c90c6deb952272950 by Nate Graham.
Committed on 01/06/2022 at 22:29.
Pushed by ngraham into branch 'master'.

Clear cache when syncing

The syncing process simply writes files to the SDDM user's homedir; it
doesn't do any of the fancy notifying that can happen when you change
settings in a running session. As a result, old cached stuff can be kept
around and leak into the user's settings.

Let's always clear the cache at the beginning of a sync to make sure
that we return to a fresh clean state.
FIXED-IN: 5.24.6

M  +9    -0    sddmauthhelper.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/77052b081b709e3d7dd76f4c90c6deb952272950
Comment 22 Nate Graham 2022-06-01 22:33:56 UTC
Git commit 34fbb8cf59cbf632ad0373b0fe0da49d1b4c70f2 by Nate Graham.
Committed on 01/06/2022 at 22:33.
Pushed by ngraham into branch 'Plasma/5.25'.

Clear cache when syncing

The syncing process simply writes files to the SDDM user's homedir; it
doesn't do any of the fancy notifying that can happen when you change
settings in a running session. As a result, old cached stuff can be kept
around and leak into the user's settings.

Let's always clear the cache at the beginning of a sync to make sure
that we return to a fresh clean state.
FIXED-IN: 5.24.6


(cherry picked from commit 77052b081b709e3d7dd76f4c90c6deb952272950)

M  +9    -0    sddmauthhelper.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/34fbb8cf59cbf632ad0373b0fe0da49d1b4c70f2
Comment 23 Nate Graham 2022-06-01 22:34:16 UTC
Git commit 6ced60fb5d8c8337e358814972bfe8f550ee8a83 by Nate Graham.
Committed on 01/06/2022 at 22:34.
Pushed by ngraham into branch 'Plasma/5.24'.

Clear cache when syncing

The syncing process simply writes files to the SDDM user's homedir; it
doesn't do any of the fancy notifying that can happen when you change
settings in a running session. As a result, old cached stuff can be kept
around and leak into the user's settings.

Let's always clear the cache at the beginning of a sync to make sure
that we return to a fresh clean state.
FIXED-IN: 5.24.6


(cherry picked from commit 77052b081b709e3d7dd76f4c90c6deb952272950)

M  +9    -0    sddmauthhelper.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/6ced60fb5d8c8337e358814972bfe8f550ee8a83